cmake_minimum_required(VERSION 3.12)
project(test_clock C CXX)
add_compile_options("-g")
add_executable(tsc_clock tsc_clock.cc)
target_include_directories(tsc_clock PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../src)
target_link_directories(tsc_clock PRIVATE ${CMAKE_CURRENT_LIST_DIR}/../output/lib)
target_link_libraries(tsc_clock PRIVATE tscns)
target_link_libraries(tsc_clock PRIVATE pthread)
