cmake_minimum_required(VERSION 3.12)
project(tsctest)
add_compile_options(-g)
add_executable(test_nanoclock test_nanoclock.cc)
target_include_directories(test_nanoclock PRIVATE /home/james/work/tsc_clock/src)
target_link_directories(test_nanoclock PRIVATE /home/james/work/tsc_clock/src/build)
target_link_libraries(test_nanoclock PRIVATE tscclocksource)